Fix spacing for collapsed page headers.

--- a/src/app/components/page-header/page-header.styl
+++ b/src/app/components/page-header/page-header.styl
@@ -167,3 +167,6 @@ $-cover-buttons-height = $button-md-line-height + 20px
 				justify-content: center
 				align-items: center
 				overflow: hidden
+
+			&.has-cover-buttons
+				padding-top: $-cover-buttons-height + 20px
